# image2sound

./: .gitignore  README.md  dimension_calc.py  justfile  main.py  podman-compose.yaml  pyproject.toml  requirements.in  requirements.txt  sound2image.py  sound_image.py  tone_array.py
src/: comp-engine.py  comp_engine.py  dimension_calc.py  dynamic_key_gen.py  envelope_settings.py  generate_quartet.py  main.py  midi_conversion.py  movement_definitions.py  quartet.py  sound_image.py  tone_array.py
