[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image2sound"
version = "0.5"
authors = [
  { name="John Beers", email="jaerrib@tutanota.com" },
]
description = "A Python utility that converts images to audio. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]

[project.urls]
"Homepage" = "https://codeberg.org/jaerrib/image2sound"
"Bug Tracker" = "https://codeberg.org/jaerrib/image2sound/issues"